--- a/socc/pom.xml
+++ b/socc/pom.xml
@@ -67,6 +67,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>socc</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -91,6 +92,13 @@
 						</exclude>
 					</excludes>
 				</configuration>
+				<executions>
+					<execution>
+						<goals>
+						<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
