--- a/socc/src/main/resources/application.properties
+++ b/socc/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=socc
 spring.datasource.url=jdbc:postgresql://localhost:5432/socc
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=soccuser
+spring.datasource.password=soccpwd
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
