--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
 
   backend:
     build:
-      context: ./socc
+      context: ./backend
     container_name: socc-backend
     ports:
       - "8080:8080"
