fix: update backend port from 8080 to 8070 in README and configuration files & update db port

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,22 +9,26 @@ services:
       POSTGRES_USER: soccuser
       POSTGRES_PASSWORD: soccpwd
     ports:
-      - "5432:5432"
+      - "5532:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - socc-net
 
   backend:
     build:
       context: ./backend
     container_name: socc-backend
     ports:
-      - "8080:8080"
+      - "8070:8080"
     depends_on:
       - db
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/socc
       - SPRING_DATASOURCE_USERNAME=soccuser
       - SPRING_DATASOURCE_PASSWORD=soccpwd
+    networks:
+      - socc-net
 
   frontend:
     build:
@@ -34,6 +38,15 @@ services:
       - "5173:5173"
     depends_on:
       - backend
+    networks:
+      - socc-net
 
 volumes:
   postgres_data:
+
+networks:
+  socc-net:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.30.0.0/16
